<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/backMainActivity"
            android:layout_width="84dp"
            android:layout_height="45dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/navname"
            android:src="@drawable/my_button_image" />

        <TextView
            android:id="@+id/inputcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/bebra"
            android:text="@string/enter_code"
            android:textColor="@color/main_color"
            android:textSize="26sp" />

        <EditText
            android:id="@+id/editCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/textedit"
            android:ems="10"
            android:hint="@string/code"
            android:inputType="textPassword"
            android:paddingHorizontal="15dp"
            android:paddingVertical="10dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="15dp"
            android:width="10dp"
            android:backgroundTint="@color/invmain_color"
            android:insetTop="1dp"
            android:insetBottom="1dp"
            android:text="@string/check"
            app:cornerRadius="5dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>