<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/bebra"
            android:text="@string/auth_text"
            android:textColor="@color/main_color"
            android:textSize="26sp" />

        <EditText
            android:id="@+id/editTextPhone"
            style="@style/Widget.AppCompat.Light.AutoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/textedit"
            android:ems="10"
            android:hint="@string/enter_your_phone"
            android:inputType="phone"
            android:paddingHorizontal="15dp"
            android:paddingVertical="10dp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="15dp"
            android:backgroundTint="@color/main_color"
            android:insetTop="1dp"
            android:insetBottom="1dp"
            android:text="@string/login" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>